--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,56 @@
 Estagio_GFT/compar_value_ref/bin/
+Estagio_GFT/compar_value_ref/obj/
+
 Estagio_GFT/Demos_ref/bin/
+Estagio_GFT/Demos_ref/obj/
+
 Estagio_GFT/Demos_ref_struct/bin/
+Estagio_GFT/Demos_ref_struct/obj/
+
 Desafios/bin/
+Desafios/obj/
+
+Estagio_GFT/Arquivos_e_Streams/csvHelper/bin/
+Estagio_GFT/Arquivos_e_Streams/csvHelper/obj/
+
+Estagio_GFT/Arquivos_e_Streams/csvStream/bin/
+Estagio_GFT/Arquivos_e_Streams/csvStream/obj/
+
+Estagio_GFT/Arquivos_e_Streams/Directory_And_DirectoryInfo/bin/
+Estagio_GFT/Arquivos_e_Streams/Directory_And_DirectoryInfo/obj/
+
+Estagio_GFT/Arquivos_e_Streams/File_And_FileInfo/bin/
+Estagio_GFT/Arquivos_e_Streams/File_And_FileInfo/obj/
+
+Estagio_GFT/Arquivos_e_Streams/FileSystemWatcher/bin/
+Estagio_GFT/Arquivos_e_Streams/FileSystemWatcher/obj/
+
+Estagio_GFT/Arquivos_e_Streams/LerDiretorio/bin/
+Estagio_GFT/Arquivos_e_Streams/LerDiretorio/obj/
+
+Estagio_GFT/Arquivos_e_Streams/StringReader/bin/
+Estagio_GFT/Arquivos_e_Streams/StringReader/obj/
+
+Estagio_GFT/Arquivos_e_Streams/StringWriter/bin/
+Estagio_GFT/Arquivos_e_Streams/StringWriter/obj/
+
+Estagio_GFT/ConstrutoresPropDelegatesEvent/ExemploConstrutores/bin/
+Estagio_GFT/ConstrutoresPropDelegatesEvent/ExemploConstrutores/obj/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
